# neimar

./: AGENT.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
agents/: agent.md  context.md
src/: app.rs  config.rs  event.rs  input.rs  main.rs  mouse.rs  session.rs  types.rs  ui.rs
