[package]
name = "neimar"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "process"] }
portable-pty = "0.9"
vt100 = "0.16"
tui-term = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3"
