[package]
name = "neimar"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Dragan Rakita <dragan0rakita@gmail.com>"]
description = "TUI app for managing multiple AI bot sessions in a terminal"
repository = "https://github.com/rakita/neimar"

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "process"] }
portable-pty = "0.9"
vt100 = "0.16"
tui-term = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
arboard = "3"
unicode-width = "0.2"
rand = "0.10.0"
